clusters/pk3s/nextcloud/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: nextcloud
  namespace: nextcloud
spec:
  entryPoints:
    - web
  routes:
    - kind: Rule
      match: Host(`sync.watchtoken.org`)
      middlewares:
        - name: redirect-to-https
          namespace: traefik
      services:
        - name: nextcloud
          port: 8080
    - kind: Rule
      match: Host(`sync.local`)
      services:
        - name: nextcloud
          port: 8080
